edit houses add new plans for all homes

--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,14 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=2.8">
+	<link rel="stylesheet" href="title.styles.css?v=3.0">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.8">
+	<link rel="stylesheet" href="css/main.min.css?v=3.0">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=2.8"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.0"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -564,11 +564,38 @@
 	<div class="editorElement layer-type-block ui-droppable block-11" >
 		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
 
-			<!-- <div class="header">
-				<div class="header_text">
-					<div class="align-elem">Наши изделия использовались в строительстве</div>
-				</div>
+
+
+<!-- 			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Видео</h2></div></div>
+			<div class="video-gallery">
+
+				<a href="#video-1" class="video-item open-form-button">
+					<div class="video-block" style="background: url('img/video/1.jpg') center no-repeat; background-size: cover;"></div>
+					<p>Дом клиента в с.Тополево</p>
+					<span>Монтаж дома в с.Тополево</span>
+				</a>
+
+				<a href="#video-2" class="video-item open-form-button">
+					<div class="video-block" style="background: url('img/video/2.jpg') center no-repeat; background-size: cover;"></div>
+					<p>Дом клиента на Красной речке</p>
+					<span>Монтаж дома в районе Красной речки</span>
+				</a>
+
+				<a href="#video-3" class="video-item open-form-button">
+					<div class="video-block" style="background: url('img/video/3.jpg') center no-repeat; background-size: cover;"></div>
+					<p>Дом клиента в с.Виноградовка</p>
+					<span>Обзор дома для килента в с.Виноградовка</span>
+				</a>
+
+				<a href="#video-4" class="video-item open-form-button">
+					<div class="video-block" style="background: url('img/video/4.jpg') center no-repeat; background-size: cover;"></div>
+					<p>Дом клиента по ул.Ханкайская</p>
+					<span>Монтаж дома для клиента по ул.Ханкайская</span>
+				</a>
+
 			</div> -->
+
+
 
 			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
 
@@ -960,6 +987,22 @@
 			<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
 		</div>
 	</form>
+
+<!-- 	<div id="video-1" class="open-video zoom-anim-dialog">
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
+	<div id="video-2" class="open-video zoom-anim-dialog">
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/zlgxR_GiscE?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
+	<div id="video-3" class="open-video zoom-anim-dialog">
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/ZqHAAZcm-h0?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
+	<div id="video-4" class="open-video zoom-anim-dialog">
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/4iGi3JAEx7s?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div> -->
 
 </div>
 
