--- a/app/houses.html
+++ b/app/houses.html
@@ -288,11 +288,11 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/5.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -301,13 +301,18 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2">
+													<a class="image fancybox" href="img/houses/people_2/1.jpg" data-fancybox="house-people_2">
 														<div class="house-price"><span>3.10 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.1" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2"></a> -->
+														<a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_2/3.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_2/4.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_2/5.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_2/6.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/6.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
@@ -316,13 +321,19 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3">
+													<a class="image fancybox" href="img/houses/people_3/1.jpg" data-fancybox="house-people_3">
 														<div class="house-price"><span>3.69 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3"></a> -->
+														<a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/3.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/4.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/5.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/6.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/6.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/7.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/7.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
