add new single level houses and half images, work before rename structure

--- a/app/houses.html
+++ b/app/houses.html
@@ -257,6 +257,72 @@
 
 
 
+						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
+
+								<div class="description">
+									<div class="align-elem">
+										<h2 class="sub-descr">Проекты одноэтажных домов</h2>
+									</div>
+								</div>
+
+								<div class="description">
+									<div class="align-elem">
+										<h2 class="sub-descr">Одноэтажный дом с двускатной кровлей</h2>
+									</div>
+								</div>
+
+								<div class="body-outer" data-columns="0,0,0,0,0">
+									<div class="body">
+										<div class="swipe-shadow-left"></div>
+										<div class="swipe-shadow-right"></div>
+										<div class="list">
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_1_dblroof/scheme.jpg" data-fancybox="house-people_1_dblroof">
+														<div class="house-price"><span>2.85 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
+													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_2_dblroof/scheme.jpg" data-fancybox="house-people_2_dblroof">
+														<div class="house-price"><span>3.70 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 122,16кв. м.</span></span>
+													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+
+								<div class="button-container">
+									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать Одноэтажный дом с двускатной кровлей</span></a>
+								</div>
+
+							</div>
+						</div>
+
+
+
+
+
 
 
 						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
@@ -264,13 +330,76 @@
 
 								<div class="description">
 									<div class="align-elem">
-										<h2 class="sub-descr">Проекты домов</h2>
+										<h2 class="sub-descr">Одноэтажный дом с четырехскатной кровлей</h2>
+									</div>
+								</div>
+
+								<div class="body-outer" data-columns="0,0,0,0,0">
+									<div class="body">
+										<div class="swipe-shadow-left"></div>
+										<div class="swipe-shadow-right"></div>
+										<div class="list">
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_1_dblroof/scheme.jpg" data-fancybox="house-people_1_dblroof">
+														<div class="house-price"><span>3.15 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
+													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_2_dblroof/scheme.jpg" data-fancybox="house-people_2_dblroof">
+														<div class="house-price"><span>3.90 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 121,16кв. м.</span></span>
+													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+
+								<div class="button-container">
+									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать Одноэтажный дом с четырехскатной кровлей</span></a>
+								</div>
+
+							</div>
+						</div>
+
+
+
+
+
+
+
+
+						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
+
+								<div class="description">
+									<div class="align-elem">
+										<h2 class="sub-descr">Проекты двухэтажных домов</h2>
 									</div>
 								</div>
 
 								<div class="description">
 									<div class="align-elem">
-										<h2 class="sub-descr">Народный дом</h2>
+										<h2 class="sub-descr">Народный дом с односкатной кровлей</h2>
 									</div>
 								</div>
 
@@ -345,7 +474,84 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать "Народный" дом</span></a>
+									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать "Народный" дом с односкатной кровлей</span></a>
+								</div>
+								
+							</div>
+						</div>
+
+
+
+
+
+
+
+						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
+
+								<div class="description">
+									<div class="align-elem">
+										<h2 class="sub-descr">Народный дом с двускатной кровлей</h2>
+									</div>
+								</div>
+
+								<div class="body-outer" data-columns="0,0,0,0,0">
+									<div class="body">
+										<div class="swipe-shadow-left"></div>
+										<div class="swipe-shadow-right"></div>
+										<div class="list">
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_1_dblroof/scheme.jpg" data-fancybox="house-people_1_dblroof">
+														<div class="house-price"><span>2.75 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_2_dblroof/scheme.jpg" data-fancybox="house-people_2_dblroof">
+														<div class="house-price"><span>3.35 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/people_3_dblroof/scheme.jpg" data-fancybox="house-people_3_dblroof">
+														<div class="house-price"><span>3.90 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/people_3_dblroof/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/people_3_dblroof/2.jpg" data-fancybox="house-people_3_dblroof" data-thumb="img/houses/people_3_dblroof/2.jpg"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+
+								<div class="button-container">
+									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать "Народный" дом с двускатной кровлей</span></a>
 								</div>
 								
 							</div>
@@ -376,7 +582,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
-														<div class="house-price"><span>2.80 млн ₽</span></div>
+														<div class="house-price"><span>2.90 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
 													</a>
@@ -395,7 +601,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
-														<div class="house-price"><span>3.43 млн ₽</span></div>
+														<div class="house-price"><span>3.55 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.1" alt="Дом 120кв. м."></span>
 													</a>
@@ -414,7 +620,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
-														<div class="house-price"><span>4.07 млн ₽</span></div>
+														<div class="house-price"><span>4.20 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.2" alt="Дом 150кв. м"></span>
 													</a>
