edit structure pages, add new photos

--- a/app/index.html
+++ b/app/index.html
@@ -83,17 +83,11 @@
 
 						<div class="menu-scroll">
 							<ul>
-								<li class="opened active menu-item">
-									<a href="/" ><span class="menu-item-text">О заводе</span></a>
-									<ul>
-										<li><a href="blog.html" ><span class="menu-item-text">Наши статьи</span></a></li>
-										<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
-									</ul>
-								</li>
-								<li class="menu-item"><a href="uslugi.html" ><span class="menu-item-text">Продукция завода</span></a></li>
-								<li class="menu-item"><a href="houses.html" ><span class="menu-item-text">Дома</span></a></li>
-								<li class="menu-item"><a href="frames.html" ><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
-								<li class="menu-item"><a href="dealers.html" ><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="index.html"><span class="menu-item-text">О заводе</span></a></li>
+								<li class="menu-item"><a href="houses.html"><span class="menu-item-text">Дома</span></a></li>
+								<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
+								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
 						</div>
 
