--- a/app/houses.html
+++ b/app/houses.html
@@ -82,17 +82,11 @@
 
 						<div class="menu-scroll">
 							<ul>
-								<li class="opened active menu-item">
-									<a href="/" ><span class="menu-item-text">О заводе</span></a>
-									<ul>
-										<li><a href="blog.html" ><span class="menu-item-text">Наши статьи</span></a></li>
-										<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
-									</ul>
-								</li>
-								<li class="menu-item"><a href="uslugi.html" ><span class="menu-item-text">Продукция завода</span></a></li>
-								<li class="menu-item"><a href="houses.html" ><span class="menu-item-text">Дома</span></a></li>
-								<li class="menu-item"><a href="frames.html" ><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
-								<li class="menu-item"><a href="dealers.html" ><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="index.html"><span class="menu-item-text">О заводе</span></a></li>
+								<li class="menu-item"><a href="houses.html"><span class="menu-item-text">Дома</span></a></li>
+								<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
+								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
 						</div>
 
@@ -280,13 +274,13 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_1_dblroof/scheme.jpg" data-fancybox="house-people_1_dblroof">
+													<a class="image fancybox" href="img/houses/single_lvl/1_dbl_roof/scheme.jpg" data-fancybox="house-1_dbl_roof">
 														<div class="house-price"><span>2.85 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_dbl_roof/sm.jpg" alt="Дом 82кв. м."></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+														<!-- <a class="image fancybox" href="img/houses/1_dbl_roof/2.jpg" data-fancybox="house-1_dbl_roof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
 													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
@@ -295,13 +289,13 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_2_dblroof/scheme.jpg" data-fancybox="house-people_2_dblroof">
+													<a class="image fancybox" href="img/houses/single_lvl/2_dbl_roof/scheme.jpg" data-fancybox="house-2_dbl_roof">
 														<div class="house-price"><span>3.70 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_dbl_roof/sm.jpg" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
+														<!-- <a class="image fancybox" href="img/houses/house-2_dbl_roof/2.jpg" data-fancybox="house-2_dbl_roof" data-thumb="img/houses/house-2_dbl_roof/2.jpg"></a> -->
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 122,16кв. м.</span></span>
 													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
@@ -342,13 +336,15 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_1_dblroof/scheme.jpg" data-fancybox="house-people_1_dblroof">
+													<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/1.jpg" data-fancybox="house-1_4th_roof">
 														<div class="house-price"><span>3.15 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/2.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/3.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/scheme.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
 													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
@@ -357,10 +353,10 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_2_dblroof/scheme.jpg" data-fancybox="house-people_2_dblroof">
+													<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/scheme.jpg" data-fancybox="house-2_4th_roof">
 														<div class="house-price"><span>3.90 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_4th_roof/sm.jpg" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
@@ -1173,6 +1169,29 @@
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
 			<p>Оставьте заявку на "Народный" дом <br>и наш менеджер свяжется с вами</p>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="КПД-100">
+			<input type="hidden" name="form_subject" value="КПД-100 | заявка на 'Народный' дом">
+			<!-- END Hidden Required Fields -->
+			<div class="inputs">
+				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
+				<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
+				<input class="input" type="text" name="email" placeholder="E-mail" required>
+			</div>
+			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+			<div class="confirm">
+				<input class="checkbox" type="checkbox" checked required />
+				<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+			</div>
+		</form>
+
+
+
+		<form class="popup-form zoom-anim-dialog form white-bg" id="take-people-house" onsubmit="">
+			<div class="success">
+				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+			</div>
+			<p>Оставьте заявку на "Народный" дом <br>с односкатной крышей <br>и наш менеджер свяжется с вами</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
 			<input type="hidden" name="form_subject" value="КПД-100 | заявка на 'Народный' дом">
