--- a/app/dealers.html
+++ b/app/dealers.html
@@ -99,8 +99,8 @@
 
 					<div class="menu-scroll">
 						<ul>
-							<li class="menu-item"><a href="index.html"><span class="menu-item-text">О заводе</span></a></li>
-							<li class="menu-item"><a href="houses.html"><span class="menu-item-text">Дома</span></a></li>
+							<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
+							<li class="menu-item"><a href="about.html"><span class="menu-item-text">О заводе</span></a></li>
 							<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
