try to add pinterest gallery on new page

--- a/app/about.html
+++ b/app/about.html
@@ -601,9 +601,8 @@
 						<div class="item-outer">
 							<div class="item">
 								<a class="image fancybox" href="img/gallery/1.jpg" data-fancybox="gallery">
-									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/1.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<div class="item-label"></div>
+									<img src="img/gallery/1.jpg" alt="gallery">
 								</a>
 							</div>
 						</div>
