--- a/app/about.html
+++ b/app/about.html
@@ -84,8 +84,14 @@
 						<div class="menu-scroll">
 							<ul>
 								<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
-								<li class="menu-item"><a href="about.html"><span class="menu-item-text">О заводе</span></a></li>
-								<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
+								<li class="menu-item">
+									<a href="about.html"><span class="menu-item-text">О заводе</span></a>
+									<!-- <ul>
+										<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
+									</ul> -->
+								</li>
+								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
+								<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
@@ -602,7 +608,7 @@
 							<div class="item">
 								<a class="image fancybox" href="img/gallery/1.jpg" data-fancybox="gallery">
 									<div class="item-label"></div>
-									<img src="img/gallery/1.jpg" alt="gallery">
+									<span class="img-convert img-cover"></span><img src="img/gallery/1.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
