--- a/app/index.html
+++ b/app/index.html
@@ -85,13 +85,14 @@
 								<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
 								<li class="menu-item">
 									<a href="about.html"><span class="menu-item-text">О заводе</span></a>
-									<ul>
+									<!-- <ul>
 										<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
-									</ul>
+									</ul> -->
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-								<li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li>
+								<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
 						</div>
 
