--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -105,8 +105,14 @@
 					<div class="menu-scroll">
 						<ul>
 							<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
-							<li class="menu-item"><a href="about.html"><span class="menu-item-text">О заводе</span></a></li>
-							<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая <br>недвижимость</span></a></li>
+							<li class="menu-item">
+								<a href="about.html"><span class="menu-item-text">О заводе</span></a>
+								<!-- <ul>
+									<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
+								</ul> -->
+							</li>
+							<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
+							<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 						</ul> 
