--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -118,12 +118,17 @@
 						<div class="menu-scroll">
 							<ul>
 								<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
-								<li class="menu-item"><a href="about.html"><span class="menu-item-text">О заводе</span></a></li>
-								<li class="menu-item"><a href="frames.html"><span class="menu-item-text">Коммерческая
-											<br>недвижимость</span></a></li>
+								<li class="menu-item">
+									<a href="about.html"><span class="menu-item-text">О заводе</span></a>
+									<!-- <ul>
+										<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
+									</ul> -->
+								</li>
+								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
+								<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
 								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
-							</ul>
+							</ul> 
 						</div>
 
 					</div>
@@ -217,13 +222,16 @@
 
 						<div class="masonry">
 
-							<a class="item image fancybox" href="img/gallery/1.jpg" data-fancybox="gallery">
-								<div class="item-label"></div>
-								<img src="img/gallery/1.jpg" alt="gallery"></span>
-							</a>
+							<div class="item">
+								<img src="img/gallery/1.jpg">
+							</div>
 
 							<div class="item">
 								<iframe width="350" height="280" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/2.jpg">
 							</div>
 
 							<div class="item">
@@ -255,15 +263,15 @@
 							</div>
 
 							<div class="item">
-								<iframe width="350" height="270" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-
-							<div class="item">
 								<img src="img/gallery/10.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/11.jpg">
+								<iframe width="350" height="270" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/11.jpeg">
 							</div>
 
 							<div class="item">
@@ -271,11 +279,11 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/13.jpg">
+								<iframe width="350" height="240" src="https://www.youtube.com/embed/4iGi3JAEx7s?" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<iframe width="350" height="240" src="https://www.youtube.com/embed/4iGi3JAEx7s?" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<img src="img/gallery/13.jpg">
 							</div>
 
 							<div class="item">
@@ -299,7 +307,15 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/19.jpeg">
+								<img src="img/gallery/19.jpg">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/20.jpg">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/21.jpg">
 							</div>
 
 						</div>
