compress new gallery images

--- a/app/about.html
+++ b/app/about.html
@@ -561,8 +561,8 @@
 
 
 
-	<div class="editorElement layer-type-block ui-droppable block-11" >
-		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
+	<!-- <div class="editorElement layer-type-block ui-droppable block-11" >
+		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget"> -->
 
 
 
@@ -597,7 +597,7 @@
 
 
 
-			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
+			<!-- <div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
 
 			<div class="body-outer">
 				<div class="body">
@@ -778,7 +778,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 
