--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -14,10 +14,10 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="styles.css?v=1.1">
-	<link rel="stylesheet" href="title.styles.css?v=2.5">
+	<link rel="stylesheet" href="title.styles.css?v=2.7">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.6">
+	<link rel="stylesheet" href="css/main.min.css?v=2.7">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
@@ -275,7 +275,7 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/12.jpg">
+								<img src="img/gallery/12.JPG">
 							</div>
 
 							<div class="item">
@@ -283,35 +283,35 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/13.jpg">
+								<img src="img/gallery/13.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/14.jpg">
+								<img src="img/gallery/14.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/15.jpg">
+								<img src="img/gallery/15.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/16.jpg">
+								<img src="img/gallery/16.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/17.jpg">
+								<img src="img/gallery/17.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/18.jpg">
+								<img src="img/gallery/18.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/19.jpg">
+								<img src="img/gallery/19.JPG">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/20.jpg">
+								<img src="img/gallery/20.JPG">
 							</div>
 
 							<div class="item">
@@ -514,7 +514,7 @@
 
 
 		<div id="video-1" class="open-video zoom-anim-dialog">
-			<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 
 
