--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -223,7 +223,7 @@
 						<div class="masonry">
 
 							<div class="item">
-								<img src="img/gallery/1.jpg">
+								<img src="img/gallery/sm/1.jpg">
 							</div>
 
 							<div class="item">
@@ -231,39 +231,39 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/2.jpg">
+								<img src="img/gallery/sm/2.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/3.jpg">
+								<img src="img/gallery/sm/3.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/4.jpg">
+								<img src="img/gallery/sm/4.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/5.jpg">
+								<img src="img/gallery/sm/5.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/6.jpg">
+								<img src="img/gallery/sm/6.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/7.jpg">
+								<img src="img/gallery/sm/7.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/8.jpg">
+								<img src="img/gallery/sm/8.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/9.jpg">
+								<img src="img/gallery/sm/9.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/10.jpg">
+								<img src="img/gallery/sm/10.jpg">
 							</div>
 
 							<div class="item">
@@ -271,11 +271,11 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/11.jpeg">
+								<img src="img/gallery/sm/11.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/12.JPG">
+								<img src="img/gallery/sm/12.jpg">
 							</div>
 
 							<div class="item">
@@ -283,39 +283,39 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/13.JPG">
+								<img src="img/gallery/sm/13.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/14.JPG">
+								<img src="img/gallery/sm/14.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/15.JPG">
+								<img src="img/gallery/sm/15.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/16.JPG">
+								<img src="img/gallery/sm/16.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/17.JPG">
+								<img src="img/gallery/sm/17.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/18.JPG">
+								<img src="img/gallery/sm/18.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/19.JPG">
+								<img src="img/gallery/sm/19.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/20.JPG">
+								<img src="img/gallery/sm/20.jpg">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/21.jpg">
+								<img src="img/gallery/sm/21.jpg">
 							</div>
 
 						</div>
